--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -137,13 +137,19 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MetaWrapperWinApi.h" />
+    <ClInclude Include="Main.h" />
+    <ClInclude Include="NativeAbstructObject.h" />
+    <ClInclude Include="NativeButton.h" />
+    <ClInclude Include="NativeWindow.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MetaWrapperWinApi.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="NativeAbstructObject.cpp" />
+    <ClCompile Include="NativeButton.cpp" />
+    <ClCompile Include="NativeWindow.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
