--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClInclude Include="Color.h">
       <Filter>MetaFrameTypes</Filter>
     </ClInclude>
+    <ClInclude Include="Margin.h">
+      <Filter>MetaFrameTypes</Filter>
+    </ClInclude>
+    <ClInclude Include="MFTafx.h">
+      <Filter>MetaFrameTypes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
