--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="NativeWindow.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="String.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
