--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="NativeWindow.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Size.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="targetver.h" />
