--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -138,7 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstructFrameElement.h" />
-    <ClInclude Include="AbstructFramePositioning.h" />
+    <ClInclude Include="AbstructFrameObject.h" />
     <ClInclude Include="Alignment.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Color.h" />
