--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
@@ -19,7 +19,13 @@
     <Filter Include="WrapperWinApiHeaders">
       <UniqueIdentifier>{274b83a4-1071-4bbc-b4a1-9b6b9f3433d6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="MetaFrameTypes">
+    <Filter Include="MetaFrameElements">
+      <UniqueIdentifier>{522b77c8-461d-4ae6-bc61-7020203a1e09}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="MetaFrameElementsHeaders">
+      <UniqueIdentifier>{e2f0ce36-7f7c-4ad9-8971-477ca0e4cfd0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="MetaTypes">
       <UniqueIdentifier>{a68ecc76-726d-4294-8835-ec64a0a7eba3}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -45,44 +51,44 @@
     <ClInclude Include="NativeWindow.h">
       <Filter>WrapperWinApiHeaders</Filter>
     </ClInclude>
-    <ClInclude Include="Window.h">
-      <Filter>WrapperWinApiHeaders</Filter>
-    </ClInclude>
-    <ClInclude Include="AbstructFrameElement.h">
-      <Filter>WrapperWinApiHeaders</Filter>
-    </ClInclude>
     <ClInclude Include="Color.h">
-      <Filter>MetaFrameTypes</Filter>
+      <Filter>MetaTypes</Filter>
     </ClInclude>
     <ClInclude Include="Margin.h">
-      <Filter>MetaFrameTypes</Filter>
+      <Filter>MetaTypes</Filter>
     </ClInclude>
     <ClInclude Include="MFTafx.h">
-      <Filter>MetaFrameTypes</Filter>
+      <Filter>MetaTypes</Filter>
     </ClInclude>
     <ClInclude Include="Alignment.h">
-      <Filter>MetaFrameTypes</Filter>
+      <Filter>MetaTypes</Filter>
     </ClInclude>
     <ClInclude Include="String.h">
-      <Filter>MetaFrameTypes</Filter>
-    </ClInclude>
-    <ClInclude Include="Button.h">
-      <Filter>WrapperWinApiHeaders</Filter>
+      <Filter>MetaTypes</Filter>
     </ClInclude>
     <ClInclude Include="Point.h">
-      <Filter>MetaFrameTypes</Filter>
+      <Filter>MetaTypes</Filter>
     </ClInclude>
     <ClInclude Include="Size.h">
-      <Filter>MetaFrameTypes</Filter>
+      <Filter>MetaTypes</Filter>
     </ClInclude>
     <ClInclude Include="Rect.h">
-      <Filter>MetaFrameTypes</Filter>
+      <Filter>MetaTypes</Filter>
     </ClInclude>
     <ClInclude Include="RectF.h">
-      <Filter>MetaFrameTypes</Filter>
+      <Filter>MetaTypes</Filter>
+    </ClInclude>
+    <ClInclude Include="Button.h">
+      <Filter>MetaFrameElementsHeaders</Filter>
+    </ClInclude>
+    <ClInclude Include="Window.h">
+      <Filter>MetaFrameElementsHeaders</Filter>
+    </ClInclude>
+    <ClInclude Include="AbstructFrameElement.h">
+      <Filter>MetaFrameElementsHeaders</Filter>
     </ClInclude>
     <ClInclude Include="AbstructFrameObject.h">
-      <Filter>WrapperWinApiHeaders</Filter>
+      <Filter>MetaFrameElementsHeaders</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -100,13 +106,13 @@
       <Filter>WrapperWinApi</Filter>
     </ClCompile>
     <ClCompile Include="Window.cpp">
-      <Filter>WrapperWinApi</Filter>
-    </ClCompile>
-    <ClCompile Include="AbstructFrameElement.cpp">
-      <Filter>WrapperWinApi</Filter>
+      <Filter>MetaFrameElements</Filter>
     </ClCompile>
     <ClCompile Include="Button.cpp">
-      <Filter>WrapperWinApi</Filter>
+      <Filter>MetaFrameElements</Filter>
+    </ClCompile>
+    <ClCompile Include="AbstructFrameElement.cpp">
+      <Filter>MetaFrameElements</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
