--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -147,7 +147,9 @@
     <ClInclude Include="MFTafx.h" />
     <ClInclude Include="NativeAbstructObject.h" />
     <ClInclude Include="NativeButton.h" />
+    <ClInclude Include="NativePanel.h" />
     <ClInclude Include="NativeWindow.h" />
+    <ClInclude Include="Panel.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="RectF.h" />
@@ -164,7 +166,9 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="NativeAbstructObject.cpp" />
     <ClCompile Include="NativeButton.cpp" />
+    <ClCompile Include="NativePanel.cpp" />
     <ClCompile Include="NativeWindow.cpp" />
+    <ClCompile Include="Panel.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
