--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -143,11 +143,13 @@
     <ClInclude Include="Border.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Color.h" />
+    <ClInclude Include="Label.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Margin.h" />
     <ClInclude Include="MFTafx.h" />
     <ClInclude Include="NativeAbstructObject.h" />
     <ClInclude Include="NativeButton.h" />
+    <ClInclude Include="NativeLabel.h" />
     <ClInclude Include="NativePanel.h" />
     <ClInclude Include="NativeWindow.h" />
     <ClInclude Include="Panel.h" />
@@ -164,9 +166,11 @@
   <ItemGroup>
     <ClCompile Include="AbstructFrameElement.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Label.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="NativeAbstructObject.cpp" />
     <ClCompile Include="NativeButton.cpp" />
+    <ClCompile Include="NativeLabel.cpp" />
     <ClCompile Include="NativePanel.cpp" />
     <ClCompile Include="NativeWindow.cpp" />
     <ClCompile Include="Panel.cpp" />
