--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="Label.h" />
+    <ClInclude Include="Layout.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Margin.h" />
     <ClInclude Include="MFTafx.h" />
