--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="Alignment.h" />
     <ClInclude Include="Border.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="CheckBox.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="Label.h" />
     <ClInclude Include="Layout.h" />
@@ -150,6 +151,7 @@
     <ClInclude Include="MFTafx.h" />
     <ClInclude Include="NativeAbstructObject.h" />
     <ClInclude Include="NativeButton.h" />
+    <ClInclude Include="NativeCheckBox.h" />
     <ClInclude Include="NativeLabel.h" />
     <ClInclude Include="NativePanel.h" />
     <ClInclude Include="NativeWindow.h" />
@@ -167,10 +169,12 @@
   <ItemGroup>
     <ClCompile Include="AbstructFrameElement.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="CheckBox.cpp" />
     <ClCompile Include="Label.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="NativeAbstructObject.cpp" />
     <ClCompile Include="NativeButton.cpp" />
+    <ClCompile Include="NativeCheckBox.cpp" />
     <ClCompile Include="NativeLabel.cpp" />
     <ClCompile Include="NativePanel.cpp" />
     <ClCompile Include="NativeWindow.cpp" />
