--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
@@ -108,6 +108,12 @@
     <ClInclude Include="Layout.h">
       <Filter>MetaTypes</Filter>
     </ClInclude>
+    <ClInclude Include="NativeCheckBox.h">
+      <Filter>WrapperWinApiHeaders</Filter>
+    </ClInclude>
+    <ClInclude Include="CheckBox.h">
+      <Filter>MetaFrameElementsHeaders</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -143,6 +149,12 @@
     </ClCompile>
     <ClCompile Include="NativeLabel.cpp">
       <Filter>WrapperWinApi</Filter>
+    </ClCompile>
+    <ClCompile Include="NativeCheckBox.cpp">
+      <Filter>WrapperWinApi</Filter>
+    </ClCompile>
+    <ClCompile Include="CheckBox.cpp">
+      <Filter>MetaFrameElements</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
