--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -144,7 +144,9 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="Car.h" />
     <ClInclude Include="CheckBox.h" />
+    <ClInclude Include="PanelQueue.h" />
     <ClInclude Include="PanelRepare.h" />
+    <ClInclude Include="Time.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="Game.h" />
@@ -200,6 +202,7 @@
     <ClCompile Include="NativeTextField.cpp" />
     <ClCompile Include="NativeWindow.cpp" />
     <ClCompile Include="Panel.cpp" />
+    <ClCompile Include="PanelQueue.cpp" />
     <ClCompile Include="PanelRepare.cpp" />
     <ClCompile Include="PanelUsersCreator.cpp" />
     <ClCompile Include="PanelWorkersCreator.cpp" />
