--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
@@ -176,6 +176,7 @@
     <ClInclude Include="MouseEvent.h">
       <Filter>MetaTypes</Filter>
     </ClInclude>
+    <ClInclude Include="EditorWrapped.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
