--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj.filters
@@ -237,9 +237,6 @@
     <ClCompile Include="ImagePanel.cpp">
       <Filter>MetaFrameElements</Filter>
     </ClCompile>
-    <ClCompile Include="User.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Color.cpp">
       <Filter>MetaTypes</Filter>
     </ClCompile>
@@ -266,6 +263,9 @@
     </ClCompile>
     <ClCompile Include="AutoService.cpp" />
     <ClCompile Include="Editor.cpp" />
+    <ClCompile Include="User.cpp">
+      <Filter>Auto Service Cpps</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MetaWrapperWinApi.rc">
