--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -137,6 +137,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AbstructFrameAutoSettersAndGetters.h" />
     <ClInclude Include="AbstructFrameElement.h" />
     <ClInclude Include="AbstructFrameObject.h" />
     <ClInclude Include="Alignment.h" />
