--- a/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
+++ b/MetaWrapperWinApi/MetaWrapperWinApi.vcxproj
@@ -139,7 +139,7 @@
   <ItemGroup>
     <ClInclude Include="AbstructFrameAutoSettersAndGetters.h" />
     <ClInclude Include="AbstructFrameElement.h" />
-    <ClInclude Include="AbstructFrameObject.h" />
+    <ClInclude Include="FrameObject.h" />
     <ClInclude Include="Alignment.h" />
     <ClInclude Include="AutoService.h" />
     <ClInclude Include="Border.h" />
